--- a/.github/workflows/update-global-sam-db.yml
+++ b/.github/workflows/update-global-sam-db.yml
@@ -48,6 +48,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          # Ensure chardet is installed
+          pip install chardet
       
       - name: Create data directory
         run: mkdir -p data
@@ -58,32 +60,34 @@ jobs:
           git lfs track "data/*.db"
           git add .gitattributes
       
-      - name: Run optimized daily update
+      - name: Run daily update
         env:
           REGION: ${{ github.event.inputs.region }}
-          YEARS: ${{ github.event.inputs.years_back }}
         run: |
-          # Determine years to process
-          YEARS_BACK=${YEARS:-2}
-          CURRENT_YEAR=$(date +%Y)
-          START_YEAR=$((CURRENT_YEAR - YEARS_BACK))
+          echo "Running daily update..."
           
-          echo "Processing from year $START_YEAR to $CURRENT_YEAR"
+          # Use the daily updater for incremental updates
+          python global_daily_update.py
           
-          # Run optimized bootstrap for recent years
-          if [ -z "$REGION" ]; then
-            echo "Updating all regions..."
-            python global_bootstrap_optimized.py \
-              --start-year $START_YEAR \
-              --end-year $CURRENT_YEAR \
-              --year-increment 3
-          else
-            echo "Updating region: $REGION"
-            python global_bootstrap_optimized.py \
-              --region $REGION \
-              --start-year $START_YEAR \
-              --end-year $CURRENT_YEAR \
-              --year-increment 3
+          # Only run full bootstrap if specifically requested or weekly
+          if [ "$(date +%u)" = "1" ] || [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "Running weekly refresh..."
+            YEARS_BACK=${YEARS:-2}
+            CURRENT_YEAR=$(date +%Y)
+            START_YEAR=$((CURRENT_YEAR - YEARS_BACK))
+            
+            if [ -z "$REGION" ]; then
+              python global_bootstrap.py \
+                --start-year $START_YEAR \
+                --end-year $CURRENT_YEAR \
+                --year-increment 3
+            else
+              python global_bootstrap.py \
+                --region $REGION \
+                --start-year $START_YEAR \
+                --end-year $CURRENT_YEAR \
+                --year-increment 3
+            fi
           fi
       
       - name: Test database
