Fix: Critical CSV encoding issues - Global tracker now fully operational
- Fixed CSV reader to handle all SAM.gov encodings properly
- Removed low_memory parameter that was causing failures
- Added automatic S3 fallback for downloads
- Implemented chunked processing to reduce memory usage
- Added comprehensive country identification for 195+ countries
- Created easy bootstrap runner script
- Added test suite to verify data loading
- Updated documentation with working instructions
- Database now contains FY2023-2025 data for all regions

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,34 @@
 # Python
 __pycache__/
 *.py[cod]
-*.so
+*.pyc
 .Python
 env/
 venv/
 
-# Data files
-data/*.csv
-data/*.zip
+# Logs
 *.log
+logs/
+
+# Temporary files
+*.tmp
+*.temp
+temp/
+tmp/
 
 # IDE
 .vscode/
 .idea/
+*.swp
 .DS_Store
+
+# Data files (except database)
+data/*.csv
+data/*.zip
+data/bootstrap_progress.json
 
 # Streamlit
 .streamlit/secrets.toml
+
+# Keep the database (tracked by LFS)
+!data/global_opportunities.db
